--- a/config/corne.dtsi
+++ b/config/corne.dtsi
@@ -9,7 +9,7 @@
 
     sensors: sensors {
         compatible = "zmk,keymap-sensors";
-        sensors = <&bottom_encoder &top_encoder>;
+        sensors = <&bottom_encoder>;
         triggers-per-rotation = <30>;
     };
 };
