--- a/config/corne.dtsi
+++ b/config/corne.dtsi
@@ -59,7 +59,7 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
 
     };
 
-    bottom_encoder: bottom_encoder {
+    bottom_encoder: encoder_bottom {
         compatible = "alps,ec11";
         label = "BOTTOM_ENCODER";
         a-gpios = <&pro_micro 16 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
@@ -73,8 +73,6 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
         sensors = <&bottom_encoder>;
         triggers-per-rotation = <15>;
     };
-
-    // TODO: per-key RGB node(s)?
 };
 
 &pro_micro_i2c {
