--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -4,3 +4,6 @@
 
 # Turn on logging, and set ZMK logging to debug output
 CONFIG_ZMK_USB_LOGGING=y
+
+# Set left to periphery side
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
