removes logging and makes left side central

--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -3,10 +3,7 @@ CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Turn on logging, and set ZMK logging to debug output
-CONFIG_ZMK_USB_LOGGING=y
+# CONFIG_ZMK_USB_LOGGING=y
 
-# Set right to central side
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y 
-
-# Set keyboard name
-CONFIG_ZMK_KEYBOARD_NAME="Corneucopia!"
+# Set left to central side, right to periphery side
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
