--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -3,7 +3,10 @@
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Turn on logging, and set ZMK logging to debug output
-CONFIG_ZMK_USB_LOGGING=y
+# CONFIG_ZMK_USB_LOGGING=y
 
-# Set left to periphery side
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+# Set left to central side, right to periphery side
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+
+# Set keyboard name
+CONFIG_ZMK_KEYBOARD_NAME="Corneucopia!"
