makes right side central again

--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -5,8 +5,5 @@
 # Turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
 
-# Set left to central side, right to periphery side
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
-
-# Set keyboard name
-CONFIG_ZMK_KEYBOARD_NAME="Corneucopia!"
+# Set right to central side, left to periphery side
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
