--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -6,4 +6,7 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 # CONFIG_ZMK_USB_LOGGING=y
 
 # Set left to central side, right to periphery side
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+
+# Set keyboard name
+CONFIG_ZMK_KEYBOARD_NAME="Corneucopia"
