enables deep sleep

--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -7,3 +7,8 @@
 
 # Set right to central side, left to periphery side
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+
+# uncomment to enable deep sleep
+CONFIG_ZMK_SLEEP=y
+# Sleep timeout: default 15min (900000ms)
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
