--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -10,3 +10,8 @@ CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 
 # Set keyboard name
 CONFIG_ZMK_KEYBOARD_NAME="Corneucopia"
+
+# uncomment to enable deep sleep
+CONFIG_ZMK_SLEEP=y
+# Sleep timeout: default 15min (900000ms)
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
